[TML-43] - Update tests